syntax = "proto3";

package User;

service UserService {
  rpc GetUserRating (UserRatingRequest) returns (UserRatingResponse);
  rpc UpdateUserRating (UpdateUserRatingRequest) returns (UpdateUserRatingResponse);
  rpc GetUsersDetails (UsersDetailsRequest) returns (UsersDetailsResponse);

}

message UserRatingRequest {
  int32 userId = 1;
}

message UserRatingResponse {
  double rating = 1;
}

message UpdateUserRatingRequest {
  int32 userId = 1;
  int32 rating = 2;
}

message UpdateUserRatingResponse {
  bool success = 1;
}

message UsersDetailsRequest {
  repeated int32 ids = 1;
}

message UsersDetailsResponse {
  repeated UserDetails users = 1;
}

message UserDetails {
  int32  userId    = 1;
  string firstName = 2;
  string lastName  = 3;
  double rating    = 4;
}